assets/compiler-errors/cannot_multiply.txt
[0m[1m[38;5;9merror[E0308][0m[0m[1m: mismatched types[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0mexamples/cannot_multiply.rs:28:42[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m28[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m    let ball_in_world = robot_to_world * ball;[0m
[0m   [0m[0m[1m[38;5;12m|[0m[0m                                          [0m[0m[1m[38;5;9m^^^^[0m[0m [0m[0m[1m[38;5;9mexpected `Point2<Robot>`, found `Point2<World>`[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: expected struct `Point2<[0m[0m[1m[35mRobot[0m[0m>`[0m
[0m              found struct `Point2<[0m[0m[1m[35mWorld[0m[0m>`[0m